rubocop/examples/good/style_IfUnlessModifier.rb
# Favor modifier if/unless usage when you have a single-line body.
#   Another good alternative is the usage of control flow &&/||.

# good
do_something if some_condition

# another good option
some_condition && do_something
