rubocop/examples/bad/style_IfUnlessModifier.rb
# Favor modifier if/unless usage when you have a single-line body.
#   Another good alternative is the usage of control flow &&/||.

# bad
if some_condition
  do_something
end
